change carousel-caption css attribute from "display" to "visibility", update modal-note fixed header on mobile

--- a/intelliscout-webconsole-new/css/_ui-kit.scss
+++ b/intelliscout-webconsole-new/css/_ui-kit.scss
@@ -1015,8 +1015,8 @@ ul.sub.active {
 }
 
 .carousel-caption {
-    display: none;
-    opacity: 100;
+    visibility: hidden;
+    opacity: 0;
     // height: 80px;
     //line-height: 24px; /* Height / no. of lines to display */
     overflow: hidden;
